--- a/templates/table.html
+++ b/templates/table.html
@@ -63,10 +63,12 @@
           <tbody>
             {% for item in queryset %}
             <tr>
-              <th scope="row">{{ item.pk }}</th>
-              <td>{{ item.first }}</td>
-              <td>{{ item.last }}</td>
-              <td>{{ item.handle }}</td>
+              <th scope="row">{{ item[0] }}</th>
+              <td>{{ item[1] }}</td>
+              <td>{{ item[2] }}</td>
+              <td>{{ item[3] }}</td>
+              <td>{{ item[4] }}</td>
+              <td>{{ item[5] }}</td>
             </tr>
             {% endfor %}
           </tbody>
