--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,11 @@
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Starlette</a>
+        <a class="navbar-brand" href="{{ url_for('homepage') }}">Starlette</a>
         <ul class="navbar-nav mr-auto"></ul>
-        <form class="form-inline">
+        <!--<form class="form-inline">
           <a class="btn btn-outline-light" type="submit" href="{{ url_for('homepage') }}">Login</a>
-        </form>
+        </form>-->
       </div>
     </nav>
     {% block content %}{% endblock %}
