Add detail pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', path='/css/bootstrap.min.css') }}" rel="stylesheet">
 
+    <!-- Iconic icons CSS -->
+    <link href="{{ url_for('static', path='/css/open-iconic-bootstrap.min.css') }}" rel="stylesheet">
+
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', path='/css/jumbotron.css') }}" rel="stylesheet">
   </head>
