Tweak breadcrumb text

--- a/templates/table.html
+++ b/templates/table.html
@@ -6,7 +6,7 @@
     <div class="row pt-3">
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active">General Election Results 2017</li>
+          <li class="breadcrumb-item active">UK General Election Results 2017</li>
         </ol>
       </nav>
     </div>
