Add Dashboard page

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,10 @@
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="{{ url_for('homepage') }}">Starlette</a>
+        <a class="navbar-brand" href="{{ url_for('dashboard') }}">Starlette</a>
         <ul class="navbar-nav mr-auto"></ul>
         <!--<form class="form-inline">
-          <a class="btn btn-outline-light" type="submit" href="{{ url_for('homepage') }}">Login</a>
+          <a class="btn btn-outline-light" type="submit" href="{{ url_for('dashboard') }}">Login</a>
         </form>-->
       </div>
     </nav>
