Add Dashboard page (#37)
* Add Dashboard page
* Add proper 2015 data source

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,7 +6,8 @@
     <div class="row pt-3">
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="{{ url_for('homepage') }}">UK General Election Results 2017</a></li>
+          <li class="breadcrumb-item"><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+          <li class="breadcrumb-item"><a href="{{ url_for('table', year=year) }}">UK General Election Results {{ year }}</a></li>
           <li class="breadcrumb-item active">{{ item.first_name }} {{ item.surname }}</li>
         </ol>
       </nav>
