Add controls for editing data

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -13,6 +13,27 @@
       </nav>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <div style="float: right">
+        <!--<button class="btn btn-outline-dark" type="button" id="button-addon2">Edit Columns</button>-->
+
+        <!--<div class="btn-group" role="group">
+          <button id="btnGroupDrop1" type="button" class="btn btn-outline-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Export
+          </button>
+          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <a class="dropdown-item" href="#">JSON</a>
+            <a class="dropdown-item" href="#">CSV</a>
+          </div>
+        </div>-->
+        <button class="btn btn-outline-primary" type="button" id="button-addon2" data-toggle="modal" data-target="#editModal"><span class="oi oi-pencil" title="icon name" aria-hidden="true"></span> Edit Row</button>
+        <button class="btn btn-outline-danger" type="button" id="button-addon2" data-toggle="modal" data-target="#deleteModal"><span class="oi oi-x" title="icon name" aria-hidden="true"></span>
+ Delete Row</button>
+      </div>
+      </div>
+    </div>
+
     <div class="row pt-3">
       <div class="col-md-12">
         <table class="table">
@@ -38,4 +59,65 @@
     </div>
   </div>
 </main>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Row</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-danger"><span class="oi oi-x" title="icon name" aria-hidden="true"></span> Confirm Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Edit Row</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form>
+      <div class="modal-body">
+        <div class="pr-3">
+        <div class="form-group row">
+          <label for="constituencyInput" class="col-sm-3 col-form-label">Constituency</label>
+          <input type="text" class="col-sm-9 form-control" id="exampleInputEmail1" value="{{ item.constituency }}">
+        </div>
+        <div class="form-group row">
+          <label for="surnameInput" class="col-sm-3 col-form-label">Surname</label>
+          <input type="text" class="col-sm-9 form-control" id="surnameInput" value="{{ item.surname }}">
+        </div>
+        <div class="form-group row">
+          <label for="firstNameInput" class="col-sm-3 col-form-label">First name</label>
+          <input type="text" class="col-sm-9 form-control" id="firstNameInput" value="{{ item.first_name }}">
+        </div>
+        <div class="form-group row">
+          <label for="partyInput" class="col-sm-3 col-form-label">Party</label>
+          <input type="text" class="col-sm-9 form-control" id="partyInput" value="{{ item.party }}">
+        </div>
+        <div class="form-group row">
+          <label for="votesInput" class="col-sm-3 col-form-label">Votes</label>
+          <input type="number" class="col-sm-9 form-control" id="votesInput" value="{{ item.votes }}">
+        </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary"><span class="oi oi-check" title="icon name" aria-hidden="true"></span> Save Changes</button>
+      </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
