--- a/templates/table.html
+++ b/templates/table.html
@@ -36,7 +36,7 @@
             <a class="dropdown-item" href="#">CSV</a>
           </div>
         </div>-->
-        <!-- <button class="btn btn-outline-primary" type="button" id="button-addon2">Add Row</button> -->
+        <button class="btn btn-outline-primary" type="button" id="buttonNewRow" data-toggle="modal" data-target="#newRowModal"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> New Row</button>
       </div>
       </div>
     </div>
@@ -90,4 +90,46 @@
     </div>
   </div>
 </main>
+
+<div class="modal fade" id="newRowModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New Row</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form>
+      <div class="modal-body">
+        <div class="pr-3">
+        <div class="form-group row">
+          <label for="constituencyInput" class="col-sm-3 col-form-label">Constituency</label>
+          <input type="text" class="col-sm-9 form-control" id="exampleInputEmail1">
+        </div>
+        <div class="form-group row">
+          <label for="surnameInput" class="col-sm-3 col-form-label">Surname</label>
+          <input type="text" class="col-sm-9 form-control" id="surnameInput">
+        </div>
+        <div class="form-group row">
+          <label for="firstNameInput" class="col-sm-3 col-form-label">First name</label>
+          <input type="text" class="col-sm-9 form-control" id="firstNameInput">
+        </div>
+        <div class="form-group row">
+          <label for="partyInput" class="col-sm-3 col-form-label">Party</label>
+          <input type="text" class="col-sm-9 form-control" id="partyInput">
+        </div>
+        <div class="form-group row">
+          <label for="votesInput" class="col-sm-3 col-form-label">Votes</label>
+          <input type="number" class="col-sm-9 form-control" id="votesInput">
+        </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary"><span class="oi oi-check" title="icon name" aria-hidden="true"></span> Save Changes</button>
+      </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
