--- a/templates/detail.html
+++ b/templates/detail.html
@@ -16,17 +16,6 @@
     <div class="row">
       <div class="col-md-12">
         <div style="float: right">
-        <!--<button class="btn btn-outline-dark" type="button" id="button-addon2">Edit Columns</button>-->
-
-        <!--<div class="btn-group" role="group">
-          <button id="btnGroupDrop1" type="button" class="btn btn-outline-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Export
-          </button>
-          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <a class="dropdown-item" href="#">JSON</a>
-            <a class="dropdown-item" href="#">CSV</a>
-          </div>
-        </div>-->
         <button class="btn btn-outline-primary" type="button" id="button-addon2" data-toggle="modal" data-target="#editModal"><span class="oi oi-pencil" title="icon name" aria-hidden="true"></span> Edit Row</button>
         <button class="btn btn-outline-danger" type="button" id="button-addon2" data-toggle="modal" data-target="#deleteModal"><span class="oi oi-x" title="icon name" aria-hidden="true"></span>
  Delete Row</button>
@@ -73,7 +62,9 @@
         Are you sure?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-danger"><span class="oi oi-x" title="icon name" aria-hidden="true"></span> Confirm Delete</button>
+        <form action="{{ url_for('delete-row', year=year, pk=pk) }}" method="POST">
+          <button type="submit" class="btn btn-outline-danger"><span class="oi oi-x" title="icon name" aria-hidden="true"></span> Confirm Delete</button>
+        </form>
       </div>
     </div>
   </div>
