--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,8 +14,9 @@
     <div class="row pt-3">
       <div class="col-md-12">
         <ul class="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ url_for('table', year=2017) }}">UK General Election Results 2017</a> <span class="badge badge-primary badge-pill">3,304</span></li>
-          <li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ url_for('table', year=2015) }}">UK General Election Results 2015</a> <span class="badge badge-primary badge-pill">3,971</span></li>
+          {% for row in rows %}
+          <li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ row.url }}">{{ row.text }}</a> <span class="badge badge-primary badge-pill">{{ "{:,}".format(row.count) }}</span></li>
+          {% endfor %}
         </ul>
       </div>
     </div>
