Enable 'New Row' control

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,5 +40,7 @@
     <script src="{{ url_for('static', path='/js/jquery-3.3.1.slim.min.js') }}"></script>
     <script src="{{ url_for('static', path='/js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', path='/js/bootstrap.min.js') }}"></script>
+    {% block tail %}{% endblock %}
+
   </body>
 </html>
