--- a/templates/table.html
+++ b/templates/table.html
@@ -93,36 +93,36 @@
             <div class="form-group row">
               <label for="constituencyInput" class="col-sm-3 col-form-label">Constituency</label>
               <div class="col-sm-9">
-                <input type="text" name="constituency" class="form-control {% if error.constituency %}is-invalid{% endif %}" value="{{ data.constituency }}">
-                 {% if error.constituency %}<div class="invalid-feedback">{{ error.constituency }}</div>{% endif %}
+                <input type="text" name="constituency" class="form-control {% if form_errors.constituency %}is-invalid{% endif %}" value="{{ form_values.constituency }}">
+                 {% if form_errors.constituency %}<div class="invalid-feedback">{{ form_errors.constituency }}</div>{% endif %}
               </div>
             </div>
             <div class="form-group row">
               <label for="surnameInput" class="col-sm-3 col-form-label">Surname</label>
               <div class="col-sm-9">
-                <input type="text" name="surname" class="form-control {% if error.surname %}is-invalid{% endif %}" value="{{ data.surname }}">
-                {% if error.surname %}<div class="invalid-feedback">{{ error.surname }}</div>{% endif %}
+                <input type="text" name="surname" class="form-control {% if form_errors.surname %}is-invalid{% endif %}" value="{{ form_values.surname }}">
+                {% if form_errors.surname %}<div class="invalid-feedback">{{ form_errors.surname }}</div>{% endif %}
               </div>
             </div>
             <div class="form-group row">
               <label for="firstNameInput" class="col-sm-3 col-form-label">First name</label>
               <div class="col-sm-9">
-                <input type="text" name="first_name" class="form-control {% if error.first_name %}is-invalid{% endif %}" value="{{ data.first_name }}">
-                {% if error.first_name %}<div class="invalid-feedback">{{ error.first_name}}</div>{% endif %}
+                <input type="text" name="first_name" class="form-control {% if form_errors.first_name %}is-invalid{% endif %}" value="{{ form_values.first_name }}">
+                {% if form_errors.first_name %}<div class="invalid-feedback">{{ form_errors.first_name}}</div>{% endif %}
               </div>
             </div>
             <div class="form-group row">
               <label for="partyInput" class="col-sm-3 col-form-label">Party</label>
               <div class="col-sm-9">
-                <input type="text" name="party" class="form-control {% if error.party %}is-invalid{% endif %}" value="{{ data.party }}">
-                {% if error.party %}<div class="invalid-feedback">{{ error.party}}</div>{% endif %}
+                <input type="text" name="party" class="form-control {% if form_errors.party %}is-invalid{% endif %}" value="{{ form_values.party }}">
+                {% if form_errors.party %}<div class="invalid-feedback">{{ form_errors.party}}</div>{% endif %}
               </div>
             </div>
             <div class="form-group row">
               <label for="votesInput" class="col-sm-3 col-form-label">Votes</label>
               <div class="col-sm-9">
-                <input type="number" name="votes" class="form-control {% if error.votes %}is-invalid{% endif %}" value="{{ data.votes }}">
-                {% if error.votes %}<div class="invalid-feedback">{{ error.votes}}</div>{% endif %}
+                <input type="number" name="votes" class="form-control {% if form_errors.votes %}is-invalid{% endif %}" value="{{ form_values.votes }}">
+                {% if form_errors.votes %}<div class="invalid-feedback">{{ form_errors.votes}}</div>{% endif %}
               </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
 {% endblock %}
 
 {% block tail %}
-{% if error %}
+{% if form_errors %}
 <script type="text/javascript">
   $('#newRowModal').removeClass('fade')
   $('#newRowModal').modal('show');
