--- a/templates/detail.html
+++ b/templates/detail.html
@@ -27,21 +27,11 @@
       <div class="col-md-12">
         <table class="table">
           <tbody>
+            {% for key, field in schema.fields.items() %}
             <tr>
-              <th>Constituency</th><td>{{ item.constituency }}</td>
+              <th>field.title</th><td>{{ item[key] }}</td>
             </tr>
-            <tr>
-              <th>Surname</th><td>{{ item.surname }}</td>
-            </tr>
-            <tr>
-              <th>First name</th><td>{{ item.first_name }}</td>
-            </tr>
-            <tr>
-              <th>Party</th><td>{{ item.party }}</td>
-            </tr>
-            <tr>
-              <th>Votes</th><td>{{ "{:,}".format(item.votes) }}</td>
-            </tr>
+            {% endfor %}
           </tbody>
         </table>
       </div>
@@ -81,41 +71,15 @@
       </div>
       <form action="{{ request.url }}" method="POST">
       <div class="modal-body">
+        {% for key, field in schema.fields.items() %}
         <div class="form-group row">
-          <label for="constituencyInput" class="col-sm-3 col-form-label">Constituency</label>
+          <label class="col-sm-3 col-form-label">{{ field.title }}</label>
           <div class="col-sm-9">
-            <input type="text" name="constituency" class="form-control {% if form_errors.constituency %}is-invalid{% endif %}" value="{{ form_values.constituency }}">
-             {% if form_errors.constituency %}<div class="invalid-feedback">{{ form_errors.constituency }}</div>{% endif %}
+            <input type="text" name="{{ key }}" class="form-control {% if form_errors[key] %}is-invalid{% endif %}" value="{{ form_values[key] }}">
+             {% if form_errors[key] %}<div class="invalid-feedback">{{ form_errors[key] }}</div>{% endif %}
           </div>
         </div>
-        <div class="form-group row">
-          <label for="surnameInput" class="col-sm-3 col-form-label">Surname</label>
-          <div class="col-sm-9">
-            <input type="text" name="surname" class="form-control {% if form_errors.surname %}is-invalid{% endif %}" value="{{ form_values.surname }}">
-            {% if form_errors.surname %}<div class="invalid-feedback">{{ form_errors.surname }}</div>{% endif %}
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="firstNameInput" class="col-sm-3 col-form-label">First name</label>
-          <div class="col-sm-9">
-            <input type="text" name="first_name" class="form-control {% if form_errors.first_name %}is-invalid{% endif %}" value="{{ form_values.first_name }}">
-            {% if form_errors.first_name %}<div class="invalid-feedback">{{ form_errors.first_name}}</div>{% endif %}
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="partyInput" class="col-sm-3 col-form-label">Party</label>
-          <div class="col-sm-9">
-            <input type="text" name="party" class="form-control {% if form_errors.party %}is-invalid{% endif %}" value="{{ form_values.party }}">
-            {% if form_errors.party %}<div class="invalid-feedback">{{ form_errors.party}}</div>{% endif %}
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="votesInput" class="col-sm-3 col-form-label">Votes</label>
-          <div class="col-sm-9">
-            <input type="number" name="votes" class="form-control {% if form_errors.votes %}is-invalid{% endif %}" value="{{ form_values.votes }}">
-            {% if form_errors.votes %}<div class="invalid-feedback">{{ form_errors.votes}}</div>{% endif %}
-          </div>
-        </div>
+        {% endfor %}
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-outline-primary"><span class="oi oi-check" title="icon name" aria-hidden="true"></span> Save Changes</button>
