Implement 'add table'

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -59,3 +59,13 @@
   </div>
 </div>
 {% endblock %}
+
+{% block tail %}
+{% if form_errors %}
+<script type="text/javascript">
+  $('#newRowModal').removeClass('fade')
+  $('#newRowModal').modal('show');
+  $('#newRowModal').addClass('fade')
+</script>
+{% endif %}
+{% endblock %}
